objects/Driver__c.object
<CustomObject>
    <fields>
        <fullName>Basic_pay__c</fullName>
        <label>Basic pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_amount__c</fullName>
        <label>Deduction amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Driver Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <label>Driver Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_trips__c</fullName>
        <label>Number of trips</label>
        <summaryForeignKey>Booking__c.Driver__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <formula>Number_of_trips__c  * 30 +  Basic_pay__c - Deduction_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Driver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>